--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "SNS Service",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon app",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [
     "sns"
@@ -29,6 +31,8 @@
     "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
