add integration test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SNS Service",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
+    "start": "nodemon server",
     "test": "jest",
     "coverage": "jest --coverage"
   },
