--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
+    "artillery": "^2.0.0-30",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
