--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SNS Service",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server",
+    "start": "cross-env NODE_ENV=production PORT=80 pm2 start server.js",
+    "dev": "nodemon server",
     "test": "jest",
     "coverage": "jest --coverage"
   },
@@ -16,9 +17,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
@@ -26,9 +31,12 @@
     "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "pm2": "^5.2.2",
     "prettier": "^2.8.4",
+    "sanitize-html": "^2.10.0",
     "sequelize": "^6.28.1",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "artillery": "^2.0.0-30",
